frontend/assets/css/main.css
@import url(https://fonts.googleapis.com/css?family=Lobster);

/* Responsive line-break */
.br { display: block; }
@media screen and (min-width: 40.063em){
  .br { display: inline; }
}

body {
  background: #f0f0f4;
  font-family: serif;
}

/* Main title including mobile version */
h1 {
  color: #383838;
  margin: 30px 0 55px 0;
  font-size: 85px;
  font-family: 'Lobster', serif;
  text-align: center;
}
@media screen and (max-width: 40em){
  h1 {
    margin: 10px 0 25px 0;
    font-size: 55px;
  }
}

.tip {
  margin-bottom: 25px;
  line-height: 2.1em;
}

.venue-tip {
  font-family: 'Lobster', serif;
  font-size: 40px;
}

.beer-tip {
  font-size: 28px;
  color: #555;
}

.beer-tip a {
  font-weight: 300;
}

.beer-tip i {
  font-size: 80%;
  margin-left: 10px;
}

a {
  color: #222;
}
a:visited {
  color: #222;
}
a:hover {
  color: #000;
}
a:active {
  color: #000;
}

.please-wait {
  text-align: center;
  color: #666;
  font-size: 30px;
  font-style: italic;
}

.accordion {
  margin-top: 20px;
  background: none;
}

.accordion-title {
  font-size: 18px;
  color: black;
  background: none;
}

.accordion-title::before {
  display: none;
}

.label {
  margin-right: 3px;
}

